force-app/main/default/objects/WorkOrder/fields/Doorpack_AssignName__c.field-meta.xml
<CustomField>
    <fullName>Doorpack_AssignName__c</fullName>
    <label>Doorpack AssignName</label>
    <length>25</length>
    <type>Text</type>
</CustomField>