force-app/main/default/objects/WorkOrder/fields/Doorpack_AutoKey__c.field-meta.xml
<CustomField>
    <fullName>Doorpack_AutoKey__c</fullName>
    <externalId>true</externalId>
    <label>Doorpack AutoKey</label>
    <length>10</length>
    <type>Text</type>
</CustomField>