force-app/main/default/objects/WorkOrder/fields/Doorpack_Caller__c.field-meta.xml
<CustomField>
    <fullName>Doorpack_Caller__c</fullName>
    <label>Doorpack Caller</label>
    <length>25</length>
    <type>Text</type>
</CustomField>