force-app/main/default/objects/WorkOrder/fields/Doorpack_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Doorpack_Created_Date__c</fullName>
    <label>Doorpack Created Date</label>
    <type>Date</type>
</CustomField>