force-app/main/default/objects/WorkOrder/fields/Doorpack_CustomerID__c.field-meta.xml
<CustomField>
    <fullName>Doorpack_CustomerID__c</fullName>
    <externalId>true</externalId>
    <label>Doorpack CustomerID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>