force-app/main/default/objects/WorkOrder/fields/Doorpack_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Doorpack_Subtotal__c</fullName>
    <label>Doorpack Subtotal</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>