force-app/main/default/objects/WorkOrder/fields/Doorpack_Tax__c.field-meta.xml
<CustomField>
    <fullName>Doorpack_Tax__c</fullName>
    <label>Doorpack Tax</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>