force-app/main/default/objects/WorkOrder/fields/Doorpack_TotalwithTax__c.field-meta.xml
<CustomField>
    <fullName>Doorpack_TotalwithTax__c</fullName>
    <label>Doorpack TotalwithTax</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>