force-app/main/default/objects/WorkOrder/fields/Doorpack_WorkOrdNo__c.field-meta.xml
<CustomField>
    <fullName>Doorpack_WorkOrdNo__c</fullName>
    <externalId>true</externalId>
    <label>Doorpack WorkOrdNo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>