force-app/main/default/objects/WorkOrder/fields/Doorpack_WOType__c.field-meta.xml
<CustomField>
    <fullName>Doorpack_WOType__c</fullName>
    <label>Doorpack WOType</label>
    <length>25</length>
    <type>Text</type>
</CustomField>