force-app/main/default/objects/WorkOrder/fields/Number_of_WOLIs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_WOLIs__c</fullName>
    <description>Counts related work order line items</description>
    <label>Number of WOLIs</label>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>