force-app/main/default/objects/WorkOrder/fields/QBO_Id__c.field-meta.xml
<CustomField>
    <fullName>QBO_Id__c</fullName>
    <label>QBO Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>