force-app/main/default/objects/WorkOrder/fields/QBO_Sync_Token__c.field-meta.xml
<CustomField>
    <fullName>QBO_Sync_Token__c</fullName>
    <label>QBO Sync Token</label>
    <length>25</length>
    <type>Text</type>
</CustomField>