force-app/main/default/objects/WorkOrder/fields/Sales_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sales_Commission_Amount__c</fullName>
    <formula>IF( Profit_Margin__c &lt; 0.2333,  Profit_Margin__c *  Total_Profit__c , 0.3333 * Total_Profit__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>IF( Profit_Margin__c &lt; 23.33, Profit_Margin__c * Total_Profit__c , 0.3333 * Total_Profit__c )</inlineHelpText>
    <label>Sales Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>