force-app/main/default/objects/WorkOrder/listViews/All_WorkOrders.listView-meta.xml
<ListView>
    <fullName>All_WorkOrders</fullName>
    <columns>Name</columns>
    <columns>Subject</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>IsClosed</columns>
    <columns>Doorpack_WorkOrdNo__c</columns>
    <columns>Doorpack_AssignName__c</columns>
    <columns>Doorpack_TotalwithTax__c</columns>
    <columns>Doorpack_WOType__c</columns>
    <columns>StartDate</columns>
    <columns>EndDate</columns>
    <columns>Doorpack_Created_Date__c</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <label>All Work Orders</label>
</ListView>