force-app/main/default/objects/WorkOrder/listViews/Closed_Work_Orders.listView-meta.xml
<ListView>
    <fullName>Closed_Work_Orders</fullName>
    <columns>Name</columns>
    <columns>Subject</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsClosed</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Closed Work Orders</label>
</ListView>